objects/Stage__c.object
<CustomObject>
    <fields>
        <fullName>Default_Predecessor_Stage_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Predecessor Process  Stage ID</label>
        <referenceTo>Stage__c</referenceTo>
        <relationshipLabel>Process Stage</relationshipLabel>
        <relationshipName>Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Allowable_Risk_Priority_Nbr__c</fullName>
        <label>Maximum Allowable Risk Priority Nbr</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Process Stage Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Process Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Process Stage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IZ00000005uupMAA_00NZ000000133qPMAQ</fullName>
        <active>false</active>
        <field>Stage_Deliverable__c.Stage_ID__c</field>
        <filterItems>
            <field>Stage__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Stage Deliverable_Stage ID</name>
    </namedFilters>
    <pluralLabel>Process Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>